fix invite and profile contract
